<resources>
    <string name="app_name">Dictionary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="bookmark">Bookmark</string>
    <string name="settings">Settings</string>
    <string name="input">Input Dictionaries</string>
    <string name="input_hint">Singular/Birlik\nPlural/Ko\'plik</string>
    <string name="next">Next</string>
    <string name="input_details">Input Details</string>
    <string name="previous">Previous</string>
    <string name="dictionaries">Dictionaries</string>
    <string name="my_dic">Dictionaries (SET)</string>
    <string name="folder_name">Folder name</string>
    <string name="dic_import">Dictionaries import</string>
    <string name="cancel">Cancel</string>
    <string name="new_folder">New folder</string>
    <string name="new_dictionary">New dictionary</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="key_desc">Key description</string>
    <string name="value_desc">Value description</string>
    <string name="key_value_empty">Key or value is empty</string>
    <string name="is_folder">Is folder</string>
    <string name="save">Save</string>
    <string name="run">Run</string>
    <string name="run_settings">Run Settings</string>
    <string name="go">Go</string>
    <string name="test">Test</string>
    <string name="card">Card</string>
    <string name="question">Question</string>
</resources>