<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".ui.screen.new_item.NewItemFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp">

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_arrow_back"
                app:tint="@color/gray" />

            <TextView
                android:id="@+id/screen_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:maxLines="1"
                android:paddingStart="@dimen/_5sdp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:text="@string/new_folder"
                android:textColor="@color/gray"
                android:textSize="@dimen/_18sdp" />

            <ImageView
                android:id="@+id/delete"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:foreground="?attr/selectableItemBackground"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_delete"
                android:visibility="invisible"
                app:tint="@color/colorPrimary" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_0"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp">

                    <EditText
                        android:id="@+id/et_input_0"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints=""
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="top"
                        android:hint="@string/folder_name"
                        android:inputType="textShortMessage" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/is_folder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/is_folder_check"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:src="@drawable/ic_checked" />

                    <TextView
                        android:id="@+id/is_folder_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/is_folder"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_1"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/et_input_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints=""
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="top"
                        android:hint="@string/key"
                        android:inputType="textShortMessage" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_2"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/et_input_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints=""
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="top"
                        android:hint="@string/value"
                        android:inputType="textShortMessage" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_3"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/et_input_3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints=""
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="top"
                        android:hint="@string/key_desc"
                        android:inputType="textShortMessage" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_4"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/et_input_4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints=""
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="top"
                        android:hint="@string/value_desc"
                        android:inputType="textShortMessage" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_import"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:backgroundTint="@color/colorAccent"
                    android:fontFamily="@font/poppins_medium"
                    android:padding="@dimen/_6sdp"
                    android:text="@string/dic_import"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_14sdp"
                    android:visibility="gone"
                    app:cornerRadius="@dimen/_10sdp"
                    app:icon="@drawable/ic_downward"
                    app:iconGravity="textStart"
                    app:iconSize="@dimen/_20sdp"
                    app:iconTint="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/cancel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/gray_2"
                        android:fontFamily="@font/poppins_medium"
                        android:padding="@dimen/_6sdp"
                        android:text="@string/cancel"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"
                        app:cornerRadius="@dimen/_10sdp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/next"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/colorPrimary"
                        android:fontFamily="@font/poppins_medium"
                        android:padding="@dimen/_6sdp"
                        android:text="@string/save"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/_14sdp"
                        app:cornerRadius="@dimen/_10sdp" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</FrameLayout>