<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".ui.screen.input.InputFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_12sdp">

            <TextView
                android:id="@+id/screen_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:maxLines="1"
                android:text="@string/input"
                android:textColor="@color/gray"
                android:textSize="@dimen/_18sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/et_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints=""
                    android:gravity="top"
                    android:hint="@string/input_hint"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/poppins_medium"
                android:padding="@dimen/_6sdp"
                android:text="@string/next"
                android:textSize="@dimen/_14sdp"
                app:cornerRadius="@dimen/_10sdp"
                app:icon="@drawable/ic_arrow_forward"
                app:iconGravity="textEnd"
                app:iconSize="@dimen/_15sdp" />

        </LinearLayout>


    </LinearLayout>

</FrameLayout>