<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.settingrun.SettingsRunFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp">

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_arrow_back"
                app:tint="@color/gray" />

            <TextView
                android:id="@+id/screen_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:maxLines="1"
                android:paddingStart="@dimen/_5sdp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:text="@string/run_settings"
                android:textColor="@color/gray"
                android:textSize="@dimen/_18sdp" />

            <ImageView
                android:id="@+id/add"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:foreground="?attr/selectableItemBackground"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_folder_add"
                android:visibility="invisible"
                app:tint="@color/colorPrimary" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:background="@drawable/bg_gray"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/test"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp">

                        <ImageView
                            android:id="@+id/test_icon"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:padding="@dimen/_5sdp"
                            android:src="@drawable/ic_radio_button_on"
                            app:tint="@color/colorAccent" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:fontFamily="@font/poppins_medium"
                            android:maxLines="1"
                            android:text="@string/test"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp">

                        <ImageView
                            android:id="@+id/card_icon"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:padding="@dimen/_5sdp"
                            android:src="@drawable/ic_radio_button_off"
                            app:tint="@color/colorAccent" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:fontFamily="@font/poppins_medium"
                            android:maxLines="1"
                            android:text="@string/card"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/go"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/poppins_medium"
            android:padding="@dimen/_6sdp"
            android:text="@string/go"
            android:textSize="@dimen/_14sdp"
            app:cornerRadius="@dimen/_10sdp" />
    </LinearLayout>

</FrameLayout>