<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".ui.screen.input_details.InputDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_12sdp">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:src="@drawable/ic_arrow_back"
                app:tint="@color/gray"/>

            <TextView
                android:id="@+id/screen_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/input_details"
                android:textColor="@color/gray"
                android:textSize="@dimen/_18sdp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:src="@drawable/ic_settings"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:ignore="NestedWeights"
                tools:itemCount="20"
                tools:listitem="@layout/item_dictionary_selector" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/previous"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/gray_2"
                    android:fontFamily="@font/poppins_medium"
                    android:padding="@dimen/_6sdp"
                    android:text="@string/previous"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    app:cornerRadius="@dimen/_10sdp"
                    app:icon="@drawable/ic_back"
                    app:iconGravity="textStart"
                    app:iconSize="@dimen/_15sdp"
                    app:iconTint="@color/black" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/next"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimary"
                    android:fontFamily="@font/poppins_medium"
                    android:padding="@dimen/_6sdp"
                    android:text="@string/next"
                    android:textSize="@dimen/_14sdp"
                    app:cornerRadius="@dimen/_10sdp"
                    app:icon="@drawable/ic_arrow_forward"
                    app:iconGravity="textEnd"
                    app:iconSize="@dimen/_15sdp" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</FrameLayout>